--- a/templates/display_department.html
+++ b/templates/display_department.html
@@ -18,28 +18,32 @@
 
         <h1 class="mb-2"> {{department}} Courses</h1>
         
-        {%if data.items%}
-        {% for name, sections in data.items %}
+        {%if courses%}
+        {% for course in courses %}
             <ul class="list-group">
-                <li class="list-group-item active" aria-current="true"> {{name}}</li>
-                {%for section in sections%}
+                <li class="list-group-item active" aria-current="true"> {{course}}</li>
+                {%for section in course.section_set.all%}
                     <li class="list-group-item py-0">
                         <div class="row py-1">
                             <div class="col-1">{{section.course_number}}-{{section.course_section}}</div>
                             <div class="col-1">{{section.units}} Unit {{section.component}}</div>
                             <div class="col-1">{{section.enrollment_total}} / {{section.class_capacity}}</div>
-                            <div class="col-2">{{section.instructor.name}}</div>
-                            <div class="col-3">
+                            <div class="col-2">{{section.instructor_name}}</div>
+                            <div class="col-4">
                                 {% for meeting in section.get_meetings%}
-                                    <div >{{meeting}}</div>
-                                {%endfor%}
-                            </div>
-                            <div class="col-3">
-                                {% for meeting in section.get_meetings%}
-                                    <div >{{meeting.facility_description}}</div>
+                                    <div >{{meeting}} | {{meeting.facility_description}}</div>
                                 {%endfor%}
                             </div>
                             <div class="col-1">
+                                <form class="" action="{% url 'unsave_section' %}" method="get">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="next" value="{{request.path}}"/>
+                                    <button class="btn btn-outline-primary py-0" name="section_to_unsave" type="submit" value={{section.course_number}}>Info</button>
+                                </form>
+
+                            </div>
+
+                            {% comment %} <div class="col-1">
                                 {%if section in profile.saved_sections.all%}
                                     <form class="" action="{% url 'unsave_section' %}" method="post">
                                         {% csrf_token %}
@@ -53,7 +57,7 @@
                                         <button class="btn btn-primary py-0" name="section_to_save" type="submit" value={{section.course_number}}>Save</button>
                                     </form>
                                 {%endif%}
-                            </div>
+                            </div> {% endcomment %}
 
                         </div>
                         
