--- a/templates/display_department.html
+++ b/templates/display_department.html
@@ -35,7 +35,7 @@
                                 {%endfor%}
                             </div>
                             <div class="col-2">
-                                <form class="" action="{% url 'course_page' course.subject course.catalog_number%}" method="get">
+                                <form class="" action="{% url 'section_page' course.subject course.catalog_number section.course_number%}" method="get">
                                     {% csrf_token %}
                                     <button class="btn btn-outline-primary py-0" name="" type="submit">More Info</button>
                                 </form>
