--- a/templates/search_page.html
+++ b/templates/search_page.html
@@ -66,7 +66,7 @@
         <div class="search4">
             <p> <strong> Search for a course or instructor: </strong> </p>
             <form action="{% url 'search_general_results' %}" method="get">
-                <input name="q" type="text" placeholder="Search course or instructor"/>
+                <input name="q" type="text" placeholder="Search course or instructor" size="22"/>
                 <button type="submit">Search</button>
             </form>
 
